# bytestr

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  check_len.rs
.github/: dependabot.yml
.github/workflows/: release.yml
examples/: parser_demo.rs
src/: helper.rs  impls.rs  lib.rs  serde.rs  tests.rs
